--- a/MeetBallApp/en.lproj/loginFlow.storyboard
+++ b/MeetBallApp/en.lproj/loginFlow.storyboard
@@ -25,20 +25,18 @@
                                 </constraints>
                                 <items>
                                     <barButtonItem title="Login" style="plain" id="sNa-ef-7mG">
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <segue destination="qUl-2Q-cuQ" kind="modal" modalTransitionStyle="flipHorizontal" id="NFL-Tj-yyT"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem width="165" style="plain" systemItem="fixedSpace" id="qoX-Ul-1sI"/>
+                                    <barButtonItem width="184" style="plain" systemItem="fixedSpace" id="qoX-Ul-1sI"/>
                                     <barButtonItem title="Sign Up" style="plain" id="rzj-7N-FOL">
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <segue destination="VOl-5f-mj9" kind="modal" modalTransitionStyle="flipHorizontal" id="A7y-Jg-MHe"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
-                                <color key="tintColor" red="0.14901960780000001" green="0.2274509804" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.20784313730000001" green="0.67450980390000004" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                             </toolbar>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Welcome to MeetBall Lite" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12M-Rb-gej">
                                 <rect key="frame" x="24" y="68" width="273" height="34"/>
@@ -88,6 +86,7 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="aKT-YA-yWZ">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.20784313730000001" green="0.67450980390000004" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="yEL-lP-1Ve">
                         <rect key="frame" x="0.0" y="416" width="320" height="44"/>
@@ -165,7 +164,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Forgot Password?">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.20784313730000001" green="0.32549019610000002" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -211,27 +210,15 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="imh-6d-INc">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="yQ3-e9-nVY">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="jJa-f7-qBO">
-                                <rect key="frame" x="231" y="0.0" width="73" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal" title="Cancel">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="cancelButtonPressed:" destination="umG-v3-qhb" eventType="touchUpInside" id="cpp-gm-fWs"/>
-                                </connections>
-                            </button>
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="2OD-ln-3lg">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="umG-v3-qhb" id="YHj-cN-xdF"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="FacebookLogin" destination="4U0-rR-OmX" id="TDX-uT-Fih"/>
+                        <outlet property="cancelButton" destination="2OD-ln-3lg" id="xKY-TL-2ja"/>
                         <outlet property="emailField" destination="ske-PK-LUR" id="AkZ-Lv-a1q"/>
                         <outlet property="loginButton" destination="d5u-Xl-Kyf" id="rwS-0q-xcs"/>
                         <outlet property="passwordField" destination="49c-3N-OZ8" id="fwE-Jo-GV1"/>
@@ -320,6 +307,7 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fYe-0f-eDI">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.20784313730000001" green="0.67450980390000004" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="XOe-PC-h2u" kind="relationship" relationship="rootViewController" id="3xs-Eh-1ZY"/>
@@ -341,10 +329,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="8" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="93b-sx-5iL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" style="grouped" separatorStyle="default" sectionIndexMinimumDisplayRowCount="8" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="93b-sx-5iL">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="408"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="320" id="ZvC-Di-cux"/>
                                 </constraints>
@@ -381,27 +369,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sign Up" id="9Bc-Oq-CVh">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="KY0-Ib-8vg">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="y07-za-Fqp">
-                                <rect key="frame" x="230" y="7" width="74" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <state key="normal" title="Cancel">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="cancelButtonPressed:" destination="XOe-PC-h2u" eventType="touchUpInside" id="1Sm-c5-hmN"/>
-                                    <action selector="cancelButtonPressed:" destination="umG-v3-qhb" eventType="touchUpInside" id="Z8L-aJ-al6"/>
-                                </connections>
-                            </button>
+                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="jmK-VJ-HcS">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="XOe-PC-h2u" id="NVG-Ry-3TZ"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="cancelButton" destination="y07-za-Fqp" id="X0Q-J5-OOT"/>
                         <outlet property="suitUpButton" destination="jpJ-nV-rAB" id="yFK-gw-f3F"/>
                         <outlet property="tableView" destination="93b-sx-5iL" id="Qc7-Ha-elh"/>
                     </connections>
