DM adding networking singleton

--- a/MeetBallApp/homeStoryBoard.storyboard
+++ b/MeetBallApp/homeStoryBoard.storyboard
@@ -12,6 +12,7 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="EXU-if-0JX">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.20784313730000001" green="0.67450980390000004" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="9k4-Qt-OAQ" kind="relationship" relationship="rootViewController" id="CfM-gX-ZEt"/>
@@ -30,11 +31,11 @@
                         <viewControllerLayoutGuide type="bottom" id="vrh-OZ-53w"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="UFR-LU-z26">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2UD-Zl-tYz">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gR3-21-jyP">
@@ -47,19 +48,23 @@
                                             <outlet property="delegate" destination="9k4-Qt-OAQ" id="g5Y-gI-slO"/>
                                         </connections>
                                     </mapView>
-                                    <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="omN-9L-aD7">
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="omN-9L-aD7">
                                         <rect key="frame" x="0.0" y="197" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <items>
-                                            <barButtonItem width="46" style="plain" systemItem="fixedSpace" id="DTR-bM-mO9"/>
-                                            <barButtonItem image="location_ic" id="uco-hA-w9G">
+                                            <barButtonItem image="location_ic" width="45" id="uco-hA-w9G">
                                                 <connections>
                                                     <action selector="adjustUserLocation:" destination="9k4-Qt-OAQ" id="c4Q-tJ-lcP"/>
                                                 </connections>
                                             </barButtonItem>
-                                            <barButtonItem width="185" style="plain" systemItem="fixedSpace" id="00C-7B-cA5"/>
-                                            <barButtonItem image="fullScreen_ic" id="w4C-Hj-S46">
+                                            <barButtonItem width="121" style="plain" systemItem="fixedSpace" id="00C-7B-cA5"/>
+                                            <barButtonItem image="car" width="61" id="LNK-Pi-heB">
+                                                <connections>
+                                                    <action selector="carLocation:" destination="9k4-Qt-OAQ" id="yVH-QE-vqh"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem image="fullScreen_ic" width="50" id="w4C-Hj-S46">
                                                 <connections>
                                                     <action selector="adjustMap:" destination="9k4-Qt-OAQ" id="Yve-uT-zNo"/>
                                                 </connections>
@@ -158,7 +163,7 @@
                                 </constraints>
                             </scrollView>
                             <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BxQ-Vg-YK7">
-                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" red="0.20784313730000001" green="0.67450980390000004" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -169,21 +174,22 @@
                                     <barButtonItem title="Throw MeetBall" width="298" style="plain" id="K6g-h6-gyw">
                                         <connections>
                                             <action selector="noMeetBalls:" destination="9k4-Qt-OAQ" id="bA1-sD-jWU"/>
+                                            <segue destination="dsP-tF-jXu" kind="push" id="S47-Os-Ki2"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
                                 <color key="barTintColor" red="0.20784313730000001" green="0.67450980390000004" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                             </toolbar>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BHE-m0-pmH" userLabel="menuSuperContainer">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LxP-x9-Jtl">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wXL-ns-c07">
-                                        <rect key="frame" x="0.0" y="64" width="320" height="505"/>
+                                        <rect key="frame" x="0.0" y="64" width="320" height="417"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
@@ -249,7 +255,7 @@
             </objects>
             <point key="canvasLocation" x="656" y="-35"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller - Success!-->
         <scene sceneID="4Iw-Xo-GgQ">
             <objects>
                 <viewController id="dsP-tF-jXu" sceneMemberID="viewController">
@@ -258,34 +264,42 @@
                         <viewControllerLayoutGuide type="bottom" id="lD3-FP-zks"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="1kP-KC-LMI">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="MeetBall Details?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NQ7-mA-uXS">
-                                <rect key="frame" x="94" y="25" width="133" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="MeetBall Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NQ7-mA-uXS">
+                                <rect key="frame" x="20" y="25" width="133" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Directly to the Compass?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sJm-cf-iRb">
-                                <rect key="frame" x="65" y="54" width="190" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="MeetBall Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ydc-jK-0D8">
+                                <rect key="frame" x="20" y="54" width="163" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Friends List:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sJm-cf-iRb">
+                                <rect key="frame" x="20" y="83" width="190" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="0SP-6A-Ko4"/>
+                    <navigationItem key="navigationItem" title="Success!" id="0SP-6A-Ko4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6UV-2N-lo8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1046" y="-35"/>
+            <point key="canvasLocation" x="1115" y="-35"/>
         </scene>
     </scenes>
     <resources>
+        <image name="car" width="20" height="18"/>
         <image name="compass" width="50" height="50"/>
         <image name="fullScreen_ic" width="20" height="20"/>
         <image name="location_ic" width="20" height="20"/>
@@ -294,6 +308,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
