--- a/MeetBallApp/SettingsStoryboard.storyboard
+++ b/MeetBallApp/SettingsStoryboard.storyboard
@@ -20,10 +20,10 @@
             </objects>
             <point key="canvasLocation" x="-43" y="18"/>
         </scene>
-        <!--View Controller - Settings-->
+        <!--Settings View Controller - Settings-->
         <scene sceneID="yZx-03-FOR">
             <objects>
-                <viewController id="h2x-k0-tfo" sceneMemberID="viewController">
+                <viewController id="h2x-k0-tfo" customClass="MBSettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qEO-0Q-L2D"/>
                         <viewControllerLayoutGuide type="bottom" id="vqd-B9-IBK"/>
@@ -31,11 +31,30 @@
                     <view key="view" contentMode="scaleToFill" id="CAe-oe-6cj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="50R-lT-lfn">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ke6-hZ-lc4">
+                                <rect key="frame" x="0.0" y="65" width="320" height="503"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="XnH-T2-dbq">
-                        <barButtonItem key="leftBarButtonItem" image="menu_ic" id="4JB-Ff-Rwq"/>
+                        <barButtonItem key="leftBarButtonItem" image="menu_ic" id="4JB-Ff-Rwq">
+                            <connections>
+                                <action selector="showMenu:" destination="h2x-k0-tfo" id="Oo3-Cc-Heh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="blurView" destination="50R-lT-lfn" id="e2A-0t-Yzk"/>
+                        <outlet property="menuContainer" destination="Ke6-hZ-lc4" id="eyL-f6-KX8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ZU-Oc-Kc9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
